--- a/css/styles.css
+++ b/css/styles.css
@@ -205,7 +205,11 @@ body {
   text-transform: uppercase;
 
   color: #ffffff;
-  background-image: linear-gradient(to right, #642f303a, #642f303a),
+  background-image: linear-gradient(
+      to right,
+      rgba(47, 48, 58, 0.4),
+      rgba(47, 48, 58, 0.4)
+    ),
     url("../images/backgrounds/effect-solutions.jpg");
 }
 
@@ -285,13 +289,11 @@ body {
 }
 
 .advantage-ico {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
   height: 120px;
-  padding-top: 25px;
-  padding-bottom: 25px;
-
-  padding-left: 100px;
-  padding-right: 100px;
-
   background: #f5f4fa;
   border-radius: 4px;
 }
@@ -358,7 +360,8 @@ body {
 
 .job-links {
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
+  gap: 10px;
   margin-top: 16px;
 }
 
@@ -368,11 +371,13 @@ body {
 }
 
 .team-link-social {
-  display: block;
-  padding: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
+  width: 100%;
+  height: 100%;
   border-radius: 50%;
-
   fill: var(--fill-icon-color);
 }
 
@@ -492,9 +497,14 @@ body {
 }
 
 .footer-link-social {
-  display: block;
-  padding: 12px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  width: 100%;
+  height: 100%;
   border-radius: 50%;
+  background: rgba(255, 255, 255, 0.1);
   fill: var(--fill-icon-color);
 }
 
